JoinTeamView connection with viewmodel

--- a/Client/Views/JoinTeamView.xaml
+++ b/Client/Views/JoinTeamView.xaml
@@ -13,6 +13,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
@@ -34,33 +36,51 @@
                      mah:TextBoxHelper.ClearTextButton="True"
                      mah:TextBoxHelper.Watermark="Write access code here"
                      mah:TextBoxHelper.IsWaitingForData="True"
-                     VerticalAlignment="Center" />
+                     VerticalAlignment="Center"
+                     Text="{Binding TeamName, UpdateSourceTrigger=PropertyChanged}" />
 
             <Button Grid.Column="1"
                     Content="Join Team"
                     Padding="8"
                     Style="{StaticResource MahApps.Styles.Button}"
+                    Command="{Binding JoinTeamCommand}"
                     Click="JoinTeamButtonClick" />
         </Grid>
 
-        <notifications:NotificationArea Grid.Row="3"
+        <TextBlock Grid.Row="2"
+                   Text="Create team:"
+                   Margin="10"
+                   Padding="10"
+                   FontSize="18" />
+
+        <Grid Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBox Grid.Column="0"
+                     Name="NewTeamName"
+                     mah:TextBoxHelper.ClearTextButton="True"
+                     mah:TextBoxHelper.Watermark="Write new team name here"
+                     mah:TextBoxHelper.IsWaitingForData="True"
+                     VerticalAlignment="Center"
+                     Text="{Binding NewTeamName, UpdateSourceTrigger=PropertyChanged}" />
+
+            <Button Grid.Column="1"
+                    Content="Create Team"
+                    Padding="8"
+                    Style="{StaticResource MahApps.Styles.Button}"
+                    Command="{Binding CreateTeamCommand}"
+                    Click="JoinTeamButtonClick" />
+        </Grid>
+
+        <notifications:NotificationArea Grid.Row="5"
                                         x:Name="WindowArea"
-                                        MaxItems="3"
+                                        MaxItems="2"
                                         Position="BottomRight" />
 
 
-        <!-- <mah:CustomDialog -->
-        <!--     Style="{StaticResource NewCustomDialogStyle}" -->
-        <!--     Title="This dialog allows arbitrary content. It will close in 5 seconds." -->
-        <!--     x:Name="CustomTestDialog"> -->
-        <!--     <StackPanel> -->
-        <!--         <TextBlock Height="30" -->
-        <!--                    Text="This dialog allows arbitrary content. You have to close it yourself by clicking the close button below." -->
-        <!--                    TextWrapping="Wrap" -->
-        <!--                    Foreground="{DynamicResource AccentColorBrush}" /> -->
-        <!--         <Button Content="Close Me!" /> -->
-        <!--     </StackPanel> -->
-        <!-- </mah:CustomDialog> -->
     </Grid>
 
 </UserControl>
